--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.batch.job.enabled=false
 
-spring.profiles.active=mysql
+spring.profiles.active=postgresql
+
+database=postgresql 
+
+spring.cloud.gcp.sql.database-name=pailsom_db
+spring.cloud.gcp.sql.instance-connection-name=absolute-vertex-328512:us-central1:pailsom-instance
