--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 spring.batch.job.enabled=false
 
-spring.profiles.active=postgresql
-
-database=postgresql 
-
+# Retrieve instance connection name from the previous step
+spring.cloud.gcp.sql.instance-connection-name=pailsom-instance
 spring.cloud.gcp.sql.database-name=pailsom_db
-spring.cloud.gcp.sql.instance-connection-name=absolute-vertex-328512:us-central1:pailsom-instance
+
+# Cloud SQL starter automatically configures the JDBC URL
+
+# Configure username/password
+spring.datasource.username=root
+spring.datasource.password=temp123
+
+# Configure connection pooling if needed
+spring.datasource.hikari.maximum-pool-size=10
