--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 spring.batch.job.enabled=false
-
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
+spring.datasource.continue-on-error=true
 # Retrieve instance connection name from the previous step
-spring.cloud.gcp.sql.instance-connection-name=pailsom-instance
+spring.cloud.gcp.sql.instance-connection-name=absolute-vertex-328512:us-central1:pailsom-instance
 spring.cloud.gcp.sql.database-name=pailsom_db
 
 # Cloud SQL starter automatically configures the JDBC URL
 
 # Configure username/password
-spring.datasource.username=root
+spring.datasource.username=postgres
 spring.datasource.password=temp123
 
 # Configure connection pooling if needed
