--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
 			<version>1.0.15</version>
 		</dependency>
 
+<!--		<dependency>-->
+<!--			<groupId>com.h2database</groupId>-->
+<!--			<artifactId>h2</artifactId>-->
+<!--			<scope>runtime</scope>-->
+<!--		</dependency>-->
 
 	</dependencies>
 
