--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,8 @@ spring.datasource.password=temp123
 
 # Configure connection pooling if needed
 spring.datasource.hikari.maximum-pool-size=10
+spring.jpa.hibernate.naming.physical-strategy=
+org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+spring.jpa.hibernate.naming.implicit-strategy=
+org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
