--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.batch.job.enabled=false
 spring.jpa.database=POSTGRESQL
+server.port=8080
 spring.datasource.platform=postgres
 spring.datasource.continue-on-error=true
 # Retrieve instance connection name from the previous step
