--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,16 @@ spring.datasource.password=temp123
 # Configure connection pooling if needed
 spring.datasource.hikari.maximum-pool-size=10
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+management.endpoint.health.show-details=never
+
+spring.jpa.properties.hibernate.format_sql=false
+
+spring.cloud.gcp.sql.enabled=true
+spring.cloud.gcp.sql.credentials.encoded-key=classpath:/absolute-vertex-328512-ad3c53d14268.json
+
+
+logging.debug.enable=false
+
+
+spring.cloud.gcp.logging.enabled=true
