--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ spring.jpa.properties.hibernate.format_sql=false
 spring.cloud.gcp.project-id=absolute-vertex-328512
 
 spring.cloud.gcp.sql.enabled=true
-spring.cloud.gcp.credentials.location=file:/absolute-vertex-328512-ad3c53d14268.json
+spring.cloud.gcp.credentials.location=classpath:/absolute-vertex-328512-ad3c53d14268.json
 
 
 logging.debug.enable=false
