--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,33 +1,40 @@
+#spring.batch.job.enabled=false
+#spring.jpa.database=POSTGRESQL
+#server.port=8080
+#spring.datasource.platform=postgres
+#spring.datasource.continue-on-error=true
+## Retrieve instance connection name from the previous step
+#spring.cloud.gcp.sql.instance-connection-name=absolute-vertex-328512:us-central1:pailsom-instance
+#spring.cloud.gcp.sql.database-name=pailsom_db
+#
+## Cloud SQL starter automatically configures the JDBC URL
+#
+## Configure username/password
+#spring.datasource.username=postgres
+#spring.datasource.password=temp123
+#
+## Configure connection pooling if needed
+#spring.datasource.hikari.maximum-pool-size=10
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#
+#management.endpoint.health.show-details=never
+#
+#spring.jpa.properties.hibernate.format_sql=false
+#
+#spring.cloud.gcp.project-id=absolute-vertex-328512
+#
+#spring.cloud.gcp.sql.enabled=true
+#spring.cloud.gcp.credentials.location=classpath:/absolute-vertex-328512-ad3c53d14268.json
+
+
+#logging.debug.enable=false
+##
+##
+##spring.cloud.gcp.logging.enabled=true
+
 spring.batch.job.enabled=false
-spring.jpa.database=POSTGRESQL
-server.port=8080
-spring.datasource.platform=postgres
-spring.datasource.continue-on-error=true
-# Retrieve instance connection name from the previous step
-spring.cloud.gcp.sql.instance-connection-name=absolute-vertex-328512:us-central1:pailsom-instance
-spring.cloud.gcp.sql.database-name=pailsom_db
-
-# Cloud SQL starter automatically configures the JDBC URL
-
-# Configure username/password
 spring.datasource.username=postgres
 spring.datasource.password=temp123
-
-# Configure connection pooling if needed
-spring.datasource.hikari.maximum-pool-size=10
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
-management.endpoint.health.show-details=never
-
-spring.jpa.properties.hibernate.format_sql=false
-
-spring.cloud.gcp.project-id=absolute-vertex-328512
-
-spring.cloud.gcp.sql.enabled=true
-spring.cloud.gcp.credentials.location=classpath:/absolute-vertex-328512-ad3c53d14268.json
-
-
-logging.debug.enable=false
-
-
-spring.cloud.gcp.logging.enabled=true
+spring.cloud.gcp.sql.instance-connection-name=absolute-vertex-328512:us-central1:pailsom-instance
+spring.cloud.gcp.sql.database-name=pailsom_db
+spring.cloud.gcp.credentials.location=classpath:\\absolute-vertex-328512-6a81b856ea60.json
